fix: add /api prefix for managing api
